--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
-numpy==1.26.4
-timesfm==1.0.0
-huggingface-hub==0.20.3
-torch==2.1.2
+fastapi
+uvicorn[standard]
+pydantic
+timesfm
