--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-fastapi
-uvicorn[standard]
-pydantic
-timesfm
-torch
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+pydantic==2.5.3
+numpy==1.26.3
+timesfm==1.0.0
+huggingface-hub==0.20.3
+torch==2.1.2
